# honours-monorepo

./: .gitignore  README.md
benchmarks/: .gitignore  CMakeLists.txt
benchmarks/blackscholes/: CMakeLists.txt
benchmarks/blackscholes/.cache/clangd/index/: blackscholes_benchmark.cpp.BD3ABAEDFDA29D4D.idx
benchmarks/blackscholes/src/: blackscholes_benchmark.cpp  blackscholes_benchmark_usability.cpp  blackscholes_runner.py  parsec_blackscholes.h
benchmarks/mandelbrot/: CMakeLists.txt
benchmarks/mandelbrot/src/: mandelbrot_benchmark.cpp
benchmarks/mandelbrot/visualiser/: visualiser.py
demo/: CMakeLists.txt
demo/src/: mandelbrot_benchmark.cpp
demo/visualiser/: visualiser.py
libhmp/: .gitignore  CMakeLists.txt  readme.md
libhmp/include/: hmp.h  mpi_cluster.h
libhmp/include/hmp/: core.h  distribution_util.h  map.h  mpi_type_traits.h  pipeline.h  typeutil.h  utils.h
libhmp/src/: debughmp.cpp  hmp.cpp  main.cpp  mpi_cluster.cpp
libhmp/src/hmp/: map.cpp  utils.cpp
mpi_setup_test/: .gitignore  makefile  mpi_setup_test.cpp
